# selenium_client

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: scrape_website.py
selenium_client/: __init__.py  selenium_client.py
