[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selenium_client"
version = "0.1.0"
description = "A simple Selenium Client"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Eduardo de la Garza", email = "eduardo@delagarzaguerra.com"
dependencies = []  # Add dependencies here (e.g., ["requests"])
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
