[project]
name = "selenium_client"
version = "0.1.0"
description = "A simple Selenium Client"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Eduardo de la Garza", email = "eduardo@delagarzaguerra.com" }]
dependencies = [
    "selenium == 4.6",
    "webdriver-manager",
    "pyvirtualdisplay",
    "beautifulsoup4"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
